--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet">
     <script src="script.js" defer></script>
-    <title>Document</title>
+    <link href="styles.css" rel="stylesheet">
+    <title>Etch-a-sketch</title>
 </head>
 <body>
-    
+    <div class="container">
+
+    </div>
 </body>
 </html>
