Add gridSizeButton that prompts for a size and check if is a valid input

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Etch-a-sketch</title>
 </head>
 <body>
+    <button class="gridSizeButton"> Grid size </button>
     <div class="container">
 
     </div>
